kubernetes/apps/office/paperless-ngx/app/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: paperless-ngx
  annotations:
    kubernetes.io/ingress.class: traefik-external
    external-dns.alpha.kubernetes.io/hostname: "" # TODO external-dns does not work with the middleware!
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`paperless.haynesnetwork.com`) && PathPrefix(`/`)
      services:
        - kind: Service
          name: paperless-ngx
          port: 80
      middlewares:
        - name: ak-outpost-authentik-embedded-outpost
          namespace: network
  tls:
    secretName: certificate-haynesnetwork
